--- a/app/views/spree/checkout/payment/_purchaseorder.html.erb
+++ b/app/views/spree/checkout/payment/_purchaseorder.html.erb
@@ -2,13 +2,13 @@
   <% param_prefix = "payment_source[#{payment_method.id}]" %>
   <p class='field'>
     <%= label_tag :po_number do %>
-      <%= Spree.t(:po_number) %><abbr class='required' title='required'>*</abbr>
+      <%= Spree.t(:po_number) %><span class='required' title='required'>*</span>
     <% end %>
     <%= text_field_tag "#{param_prefix}[po_number]", '', id: :po_number, class: 'form-control required', size: 10, maxlength: 10, autocomplete: "off" %>
   </p>
   <p class='field'>
     <%= label_tag :organization_name do %>
-      <%= Spree.t(:organization_name) %><abbr class='required' title='required'>*</abbr>
+      <%= Spree.t(:organization_name) %><span class='required' title='required'>*</span>
     <% end %>
     <%= text_field_tag "#{param_prefix}[organization_name]", '', id: :organization_name, class: 'form-control required'%>
   </p>
